# Personal-AI-Operating-System

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
apps/backend/: .env.example  manage.py  pyproject.toml
apps/backend/chronos_backend/: asgi.py  settings.py  urls.py  wsgi.py
apps/backend/chronos_backend/accounts/: apps.py  devuser.py  models.py
apps/backend/chronos_backend/accounts/migrations/: 0001_initial.py
apps/backend/chronos_backend/ai/: api.py  gateway.py  planner.py  test_api.py  test_planner.py
apps/backend/chronos_backend/events/: admin.py  api.py  apps.py  extraction.py  models.py  test_api.py  test_extraction.py
apps/backend/chronos_backend/events/migrations/: 0001_initial.py  0002_conversationdetail_mooddetail_journalentry_and_more.py  0003_event_routine_occurrence.py
apps/backend/chronos_backend/knowledge/: admin.py  api.py  apps.py  models.py  services.py  test_knowledge.py
apps/backend/chronos_backend/knowledge/migrations/: 0001_initial.py
apps/backend/chronos_backend/people/: admin.py  api.py  apps.py  models.py  test_people.py
apps/backend/chronos_backend/people/migrations/: 0001_initial.py
apps/backend/chronos_backend/routines/: admin.py  api.py  apps.py  models.py  services.py  test_routines.py
apps/backend/chronos_backend/routines/migrations/: 0001_initial.py
apps/backend/tests/: test_smoke.py
apps/frontend/: eslint.config.js  index.html  package.json
apps/frontend/src/: App.css  App.tsx  api.ts  i18n.ts  index.css
docs/: data-model.md  project-status.md
docs/adr/: 0001-ai-orchestration-split.md
