[project]
name = "chronos-backend"
version = "0.1.0"
description = "Chronos backend — Django + Django Ninja API, event domain model, AI orchestration entrypoints."
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "django-ninja>=1.3.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "python-dotenv>=1.0.1",
    "dj-database-url>=3.1.2",
    "django-cors-headers>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronos_backend"]
